csv file to resources