@@ -7,17 +7,19 @@ import com.opencsv.CSVReaderBuilder;
 
 import java.io.FileReader;
 import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
 import java.util.*;
 
 public class QuestionData {
 
-    public static List<Question> init() {
+    public static List<Question> init(InputStream data) {
         List<Question> questions = new ArrayList<>();
         CSVParser parser = new CSVParserBuilder()
                 .withSeparator('|')
                 .build();
 
-        try (CSVReader csvReader = new CSVReaderBuilder(new FileReader("q.csv"))
+        try (CSVReader csvReader = new CSVReaderBuilder((new InputStreamReader(data)))
                 .withSkipLines(0)
                 .withCSVParser(parser)
                 .build()) {
@@ -26,7 +28,7 @@ public class QuestionData {
                 try {
                     int number = Integer.valueOf(values[0]);
                     String questionBody = values[1];
-                    List<String> answers = List.of(values[2], values[3], values[4]);
+                    List<String> answers = Arrays.asList(values[2], values[3], values[4]);
                     String correctAnswer = values[5];
                     Question question = new Question(number, questionBody, answers, correctAnswer);
                     questions.add(question);
